# aura

./: .gitignore  Cargo.toml  README.md
docs/: benchmarking.md  chunking.md  compression.md  container.md  conversion.md  field-programs.md  footer-stamp.md  hot-padding.md  ingest-inference-calculations.md  naming.md  schema-header-evaluation.md  schemas.md  tiers.md
examples/: roundtrip.rs
src/: bitpack.rs  body.rs  bytes.rs  chunk.rs  cold.rs  convert.rs  error.rs  footer.rs  format.rs  generic_planner.rs  grouped.rs  header.rs  instructions.rs  lib.rs  ohlcv.rs  plan.rs  program.rs  reader.rs  records.rs  schema.rs  scoped.rs  stats.rs  synthetic.rs  types.rs  ultra.rs  varint.rs  warm.rs  writer.rs
src/legacy/: chunk.rs  cold.rs  convert.rs  grouped.rs  mod.rs  stats.rs  synthetic.rs  types.rs  ultra.rs  warm.rs
tests/: aura0_column_stats.rs  aura0_planner.rs  auraschema.rs  bitpack.rs  container_contract.rs  dynamic_schema.rs  field_program.rs  footer_preservation.rs  generic_instructions.rs  generic_planner.rs  grouping_policy.rs  i64_profiles.rs  json_i64_rows.rs  ohlcv_normalization.rs  profile_conformance.rs  profile_roundtrip.rs  schema_definition.rs  scoped_encoding.rs  stamp_restamp.rs  typed_ingest.rs  writer_reader_api.rs
