[package]
name = "aura-codec"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Experimental binary event-file format and replay codec lab"
repository = "https://github.com/L3data/aura"

[lib]
name = "aura_codec"
path = "src/lib.rs"

[[bin]]
name = "aura-size"
path = "src/bin/aura_size.rs"

[[bin]]
name = "aura-parquet-ohlcv"
path = "src/bin/parquet_ohlcv.rs"

[dependencies]
anyhow = "1"
arrow = { version = "54", features = ["prettyprint"] }
parquet = { version = "54", features = ["zstd"] }
serde_json = "1"

[[bin]]
name = "aura-json-i64"
path = "src/bin/json_i64_rows.rs"
